add site-setting and feadback endpoint to backend and set swagger for all thos endpoint
